Update Paper, bibliografy, rsync_ignore

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -348,7 +348,7 @@ url         = {https://arxiv.org/abs/1603.06270}
 
 @InProceedings{klinger2018iest,
   author    =     {Roman Klinger and Orph\'ee de Clercq and Saif M. Mohammad and Alexandra Balahur},
-  title     =     {IEST: WASSA-2018 Implicit Emotions Shared Task},
+  title     =     {{IEST: WASSA-2018 Implicit Emotions Shared Task}},
   booktitle =     {Proceedings of the 9th Workshop on Computational Approaches to Subjectivity, Sentiment and Social Media Analysis},
   year      =     {2018},
   address   =     {Brussels, Belgium},
@@ -408,7 +408,7 @@ url         = {https://arxiv.org/abs/1603.06270}
 }
 
 @ARTICLE{howard2018universal,
-   author = {{Howard}, J. and {Ruder}, S.},
+   author = {Howard, Jeremy and Ruder, Sebastian},
     title = "{Universal Language Model Fine-tuning for Text Classification}",
   journal = {ArXiv e-prints},
 archivePrefix = "arXiv",
@@ -447,3 +447,4 @@ archivePrefix = "arXiv",
  address = {New York, NY, USA},
  keywords = {big data stream, ensemble size, weighted majority voting},
 } 
+
