Update bibliography, write some intro paragraphs

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -448,3 +448,15 @@ archivePrefix = "arXiv",
  keywords = {big data stream, ensemble size, weighted majority voting},
 } 
 
+@article{balazs2016opinion,
+title = "Opinion Mining and Information Fusion: A survey",
+journal = "Information Fusion",
+volume = "27",
+pages = "95 - 110",
+year = "2016",
+issn = "1566-2535",
+doi = "https://doi.org/10.1016/j.inffus.2015.06.002",
+url = "http://www.sciencedirect.com/science/article/pii/S1566253515000536",
+author = "Jorge A. Balazs and Juan D. Velásquez",
+keywords = "Information Fusion, Survey, Opinion Mining, Sentiment Analysis"
+}
