--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -66,6 +66,10 @@ Contextualized Word Representations}
 
 \date{}
 
+% Style for acronyms; avoids splitting them.
+% See https://tex.stackexchange.com/questions/48435/how-do-i-prevent-tex-from-hyphenating-acronyms
+\newcommand{\Acronym}[1]{\mbox{#1}}
+
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -82,18 +86,39 @@ sanctus est Lorem ipsum dolor sit amet.
 \end{abstract}
 
 \section{Introduction}
-\begin{itemize}
-    \item High level description of the task~\cite{klinger2018iest} and
-          its \textit{raison d'être}
-        (Francés para Edison)
-    \item High level description of the model used and results obtained
-\end{itemize}
+
+% FIXME: EDIT THIS SECTION TO MAKE PARAGRAPHS MORE COHESIVE
+Sentiment Analysis, also known as Opinion Mining, is a discipline whose
+objective is to automatically identify sentiment in written text
+\cite{balazs2016opinion}.
+
+The \Acronym{WASSA} 2018 Implicit Emotion Shared Task
+(\Acronym{IEST})~\cite{klinger2018iest}, consists in predicting the emotion of a
+word that has been excluded from a tweet. Its aim is to find ways to
+automatically learn the link between situations and the emotion they trigger.
+
+This problem can be reduced to sentence classification, in which we
+want to classify a sentence, or more specifically a tweet, into one of several
+categories.
+
+In this paper we present the system that obtained second place, proposed by the
+team \Acronym{IIIDYT} at \Acronym{IEST}\@. Our system was composed by a single
+pre-trained \Acronym{ELMo} layer for encoding words~\cite{peters2018deep}, a
+Bidirectional Long-Short Memory Network
+(\Acronym{BiLSTM})~\cite{graves2005framewise, graves2013speech}, for enriching
+word representations with context, a max-pooling operation for creating sentence
+representations from said word vectors, and finally a Dense Layer for projecting
+the sentence representations into label space (See
+Figure~\ref{fig:architecture}).
 
 \section{Related Work}
 \begin{itemize}
-    \item briefly describe previous Wassa papers~\cite{baziotis2018ntua,
+    \item briefly describe previous Semeval papers~\cite{baziotis2018ntua,
         duppada2018seernet, abdou2018affecthor} (Should we do this despite not
         having based our work in any of them?)
+    \item mention previous Wassa papers
+    \item talk about some sentence classification tasks? Works that fall into
+        the broad category of mapping sentences to labels.
     \item Talk about elmo~\cite{peters2018deep}
 \end{itemize}
 
@@ -140,8 +165,6 @@ classifiers as class labels provides the best results~\cite{bonab2016theoretical
 
 \begin{figure}
     \centering
-    % \includegraphics[scale=0.4]{images/RNN_aqg.pdf}
-    % \includegraphics[scale=0.3]{images/best_ensembles.eps}
     \includegraphics[width=\columnwidth]{images/best_ensembles.eps}
 \caption{Best Macro F1 vs. Number of Ensembled Models}
 \label{fig:}
@@ -152,6 +175,13 @@ classifiers as class labels provides the best results~\cite{bonab2016theoretical
     \includegraphics[width=\columnwidth]{images/average_ensembles.eps}
 \caption{Best Macro F1 vs. Number of Ensembled Models}
 \label{fig:}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\columnwidth]{images/iest_architecture.pdf}
+    \caption{Proposed architecture}
+    \label{fig:architecture}
 \end{figure}
 
 
@@ -196,6 +226,7 @@ classifiers as class labels provides the best results~\cite{bonab2016theoretical
         POS emb dim=25     & 69.21                  & - 0.02          \\
 
     \end{tabular}
+    \caption{Ablation study results}
 
 \end{table}
 
