Update paper and bib

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,3 +1,4 @@
+
 @inproceedings{luong2013better,
   title     = {Better word representations with recursive neural networks for
                morphology},
@@ -460,3 +461,69 @@ url = "http://www.sciencedirect.com/science/article/pii/S1566253515000536",
 author = "Jorge A. Balazs and Juan D. Velásquez",
 keywords = "Information Fusion, Survey, Opinion Mining, Sentiment Analysis"
 }
+
+
+@inproceedings{conneau2018,
+  author = {Conneau, Alexis and Kruszewski, Germ{\'a}n and Lample, Guillaume and Barrault, Lo{\"i}c and Baroni, Marco},
+  title = {What you can cram into a single vector: Probing sentence embeddings for linguistic properties},
+  booktitle = {Proceedings of the 56th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  year = {2018},
+  publisher = {Association for Computational Linguistics},
+  pages = {2126--2136},
+  location = {Melbourne, Australia},
+  url = {http://aclweb.org/anthology/P18-1198}
+}
+
+@article{DBLP:journals/corr/KingmaB14,
+  author    = {Diederik P. Kingma and Jimmy Ba},
+  title     = {Adam: {A} Method for Stochastic Optimization},
+  journal   = {CoRR},
+  year      = {2014}
+}
+
+
+@article{Chelba2014,
+    archivePrefix = {arXiv},
+    arxivId = {1312.3005},
+    author = {Chelba, Ciprian and Mikolov, Tomas and Schuster, Mike and Ge, Qi and Brants, Thorsten and Koehn, Phillipp and Robinson, Tony},
+    doi = {10.1016/j.csl.2015.07.001},
+    eprint = {1312.3005},
+    isbn = {0885-2308},
+    issn = {19909772},
+    journal = {Proceedings of the Annual Conference of the International Speech Communication Association, INTERSPEECH},
+    keywords = {Benchmark,Language modeling,Reproducible research},
+    pages = {2635--2639},
+    pmid = {18244602},
+    title = {{One billion word benchmark for measuring progress in statistical language modeling}},
+    year = {2014}
+}
+
+@InProceedings{gimpel-EtAl:2011:ACL-HLT2011,
+  author    = {Gimpel, Kevin  and  Schneider, Nathan  and  O'Connor, Brendan  and  Das, Dipanjan  and  Mills, Daniel  and  Eisenstein, Jacob  and  Heilman, Michael  and  Yogatama, Dani  and  Flanigan, Jeffrey  and  Smith, Noah A.},
+  title     = {Part-of-Speech Tagging for Twitter: Annotation, Features, and Experiments},
+  booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies},
+  month     = {June},
+  year      = {2011},
+  address   = {Portland, Oregon, USA},
+  publisher = {Association for Computational Linguistics},
+  pages     = {42--47},
+  url       = {http://www.aclweb.org/anthology/P11-2008}
+}
+
+@inproceedings{paszke2017automatic,
+  title={Automatic differentiation in PyTorch},
+  author={Paszke, Adam and Gross, Sam and Chintala, Soumith and Chanan, Gregory and Yang, Edward and DeVito, Zachary and Lin, Zeming and Desmaison, Alban and Antiga, Luca and Lerer, Adam},
+  booktitle={NIPS Autodiff Workshop},
+  year={2017},
+  url = {https://openreview.net/pdf?id=BJJsrmfCZ}
+}
+
+@inproceedings{wassa_emoint_2017,
+	title = {{WASSA-2017} {Shared} {Task} on {Emotion} {Intensity}},
+	author = {Mohammad, Saif M. and Bravo-Marquez, Felipe},
+	booktitle = {Proceedings of the {EMNLP} 2017 {Workshop} on {Computational} {Approaches }to {Subjectivity}, {Sentiment}, and {Social} {Media} (WASSA)},
+	year = {2017},
+	month = {September}, 
+	address = {Copenhagen, Denmark}
+}
+
