--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -123,16 +123,7 @@ As our model is purely character-based, we performed little data preprocessing. 
     \label{table:substitutions}
 \end{table}
 
-    Furthermore, we tokenized the text using a variation of the
-    \texttt{twokenize.py}\footnote{\tiny\url{https://github.com/myleott/ark-twokenize-py}}
-    script, a Python port of the original \texttt{Twokenize.java}
-    \cite{gimpel-EtAl:2011:ACL-HLT2011}. Concretely, we created an emoji-aware
-    version of it by incorporating knowledge from an emoji
-    database,\footnote{\tiny\url{https://github.com/carpedm20/emoji/blob/e7bff32/emoji/unicode_codes.py}}
-    which we slightly modified for avoiding conflict with emoji sharing unicode
-    codes with common glyphs used in Twitter,\footnote{For example, the hashtag
-    emoji is composed by the unicode code points \texttt{U+23 U+FE0F U+20E3},
-which include \texttt{U+23}, the same code point for the \texttt{\#} glyph.} and for making it compatible with Python 3.
+    Furthermore, we tokenized the text using a variation of the \texttt{twokenize.py}\footnote{\tiny\url{https://github.com/myleott/ark-twokenize-py}} script, a Python port of the original \texttt{Twokenize.java} \cite{gimpel-EtAl:2011:ACL-HLT2011}. Concretely, we created an emoji-aware version of it by incorporating knowledge from an emoji database,\footnote{\tiny\url{https://github.com/carpedm20/emoji/blob/e7bff32/emoji/unicode_codes.py}} which we slightly modified for avoiding conflict with emoji sharing unicode codes with common glyphs used in Twitter,\footnote{For example, the hashtag emoji is composed by the unicode code points \texttt{U+23 U+FE0F U+20E3}, which include \texttt{U+23}, the same code point for the \texttt{\#} glyph.} and for making it compatible with Python 3.
 % \begin{itemize}
 %     \item briefly describe previous Semeval papers~\cite{baziotis2018ntua,
 %         duppada2018seernet, abdou2018affecthor} (Should we do this despite not
